Making various changes to overall structure.

--- a/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=JORDAN;Initial Catalog=EsportsCompare;Integrated Security=True"
+  },
   "front-end-url": "http://localhost:3000"
 }
