--- a/EsportsProfileApi.Web/EsportsProfileWebApi.CROSSCUTTING/EsportsProfileWebApi.CROSSCUTTING.csproj
+++ b/EsportsProfileApi.Web/EsportsProfileWebApi.CROSSCUTTING/EsportsProfileWebApi.CROSSCUTTING.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Responses\Players\" />
+    <Folder Include="Responses\Settings\" />
+  </ItemGroup>
+
 </Project>
