--- a/.github/workflows/main_SETSRV.yml
+++ b/.github/workflows/main_SETSRV.yml
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_8d4de6e776ee41a6a21fa6cf5ea9295b }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_911cacc55e164734a7e620e4d347e921 }}
+        registry: https://setsrv.azurewebsites.net/
+        username: ${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_6953646d8c1e49f397366ea8899e7cf0 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_8d4de6e776ee41a6a21fa6cf5ea9295b }}/appsvc/staticsite:${{ github.sha }}
+        tags: setsrv.azurewebsites.net/${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}/appsvc/staticsite:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'SETSRV'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5bd84409041a45828322b0a67fd5c2bd }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_8d4de6e776ee41a6a21fa6cf5ea9295b }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_e97d67fc8723462cb2e402c167115193 }}
+        images: 'setsrv.azurewebsites.net/${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}/appsvc/staticsite:${{ github.sha }}'
