--- a/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Dockerfile
+++ b/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Dockerfile
@@ -7,11 +7,11 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["EsportsProfileWebApi.Web\EsportsProfileWebApi.Web.csproj", "EsportsProfileWebApi.Web/"]
-COPY ["EsportsProfileWebApi.DOMAIN\EsportsProfileWebApi.DOMAIN.csproj", "EsportsProfileWebApi.DOMAIN/"]
-COPY ["EsportsProfileWebApi.CROSSCUTTING\EsportsProfileWebApi.CROSSCUTTING.csproj", "EsportsProfileWebApi.CROSSCUTTING/"]
-COPY ["EsportsProfileWebApi.INFRASTRUCTURE\EsportsProfileWebApi.INFRASTRUCTURE.csproj", "EsportsProfileWebApi.INFRASTRUCTURE/"]
-RUN dotnet restore "EsportsProfileWebApi.Web\EsportsProfileWebApi.Web.csproj"
+COPY ["EsportsProfileApi.Web/EsportsProfileWebApi.Web/EsportsProfileWebApi.Web.csproj", "EsportsProfileWebApi.Web/"]
+COPY ["EsportsProfileApi.Web/EsportsProfileWebApi.DOMAIN/EsportsProfileWebApi.DOMAIN.csproj", "EsportsProfileWebApi.DOMAIN/"]
+COPY ["EsportsProfileApi.Web/EsportsProfileWebApi.CROSSCUTTING/EsportsProfileWebApi.CROSSCUTTING.csproj", "EsportsProfileWebApi.CROSSCUTTING/"]
+COPY ["EsportsProfileApi.Web/EsportsProfileWebApi.INFRASTRUCTURE/EsportsProfileWebApi.INFRASTRUCTURE.csproj", "EsportsProfileWebApi.INFRASTRUCTURE/"]
+RUN dotnet restore "EsportsProfileWebApi.Web/EsportsProfileWebApi.Web.csproj"
 COPY . .
 WORKDIR "/src/EsportsProfileWebApi.Web"
 RUN dotnet build "EsportsProfileWebApi.Web.csproj" -c Release -o /app/build
