--- a/EsportsProfileApi.Web/EsportsProfileWebApi.Web/EsportsProfileWebApi.Web.csproj
+++ b/EsportsProfileApi.Web/EsportsProfileWebApi.Web/EsportsProfileWebApi.Web.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
