made some changes to start getting db connection re setup

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=JORDAN;Initial Catalog=EsportsCompare;Integrated Security=True"
+    "DefaultConnection": "data source=Jordan;initial catalog=GamingConfig;trusted_connection=true",
+    "ProductionConnection": "{{% PROD_CONNECTION_STRING %}}"
   },
   "front-end-url": "http://localhost:3000"
 }
