made changes to use jwt bearer authentication

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000",
+    "Key": "SuperDuperSecretValueSuperDuperSecretValue"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "data source=Jordan;initial catalog=GamingConfig;trusted_connection=true",
     "ProductionConnection": "{{% PROD_CONNECTION_STRING %}}"
