--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Properties/launchSettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Properties/launchSettings.json
@@ -23,7 +23,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 5000,
+      "sslPort": 5001
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
