mongo working in dev, need to clean up and figure out how to change db connections based on dev and prod.

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -11,8 +11,12 @@
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=GamingConfig;trusted_connection=true",
-    "ProductionConnection": "{{% PROD_CONNECTION_STRING %}}"
+    "DefaultConnection": "data source=Jordan;initial catalog=GamingConfig;trusted_connection=true"
+  },
+  "UserDatabase": {
+    "ConnectionString": "mongodb://127.0.0.1:27017",
+    "DatabaseName": "mydb",
+    "BooksCollectionName": "users"
   },
   "front-end-url": "http://localhost:3000"
 }
