tests need work and second query to database always fails...

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Properties/launchSettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/Properties/launchSettings.json
@@ -25,7 +25,10 @@
       "publishAllPorts": true,
       "useSSL": true,
       "httpPort": 5000,
-      "sslPort": 5001
+      "sslPort": 5001,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
