--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -5,13 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "JwtSettings": {
+  "Authentication": {
     "Issuer": "https://localhost:5000",
     "Audience": "https://localhost:5000",
     "Key": "SuperDuperSecretValueSuperDuperSecretValue"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=GamingConfig;trusted_connection=true"
+    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
   },
   "UserDatabase": {
     "ConnectionString": "mongodb://127.0.0.1:27017",
