--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Authentication": {
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000",
+    "Key": "SuperDuperSecretValueSuperDuperSecretValue"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
+  },
+  "UserDatabase": {
+    "ConnectionString": "mongodb://127.0.0.1:27017",
+    "DatabaseName": "mydb",
+    "BooksCollectionName": "users"
+  },
+  "front-end-url": "http://localhost:3000"
 }
