--- a/.github/workflows/main_SETSRV.yml
+++ b/.github/workflows/main_SETSRV.yml
@@ -1,51 +1,43 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy container app to Azure Web App - SETSRV
+name: ASP.NET Unit Tests
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: esportscompare.azurecr.io
-        username: ${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_6953646d8c1e49f397366ea8899e7cf0 }}
-
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: setsrv.azurewebsites.net/${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}/appsvc/staticsite:${{ github.sha }}
-        file: ./Dockerfile
-
-  deploy:
+  build-and-test:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
       with:
-        app-name: 'SETSRV'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_e97d67fc8723462cb2e402c167115193 }}
-        images: 'setsrv.azurewebsites.net/${{ secrets.AzureAppService_ContainerUsername_eed472d57c644e3587f463902c987d1a }}/appsvc/staticsite:${{ github.sha }}'
+        dotnet-version: '6'
+
+    - name: Restore Dependencies
+      run: dotnet restore
+
+    - name: Build
+      run: dotnet build --configuration Release
+
+    - name: Run Tests
+      run: dotnet test --configuration Release --no-build
+
+    - name: Check Test Results
+      run: dotnet test --list-tests --configuration Release | Out-File testResults.txt
+          
+    - name: Display Test Results
+      run: cat testResults.txt
+
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: testResults.txt
