--- a/.github/workflows/main_SETSRV.yml
+++ b/.github/workflows/main_SETSRV.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6'
+        dotnet-version: '6.0.x'
 
     - name: Restore Dependencies
       run: dotnet restore
