changing to correct directory and restoring solution file

--- a/.github/workflows/main_SETSRV.yml
+++ b/.github/workflows/main_SETSRV.yml
@@ -23,9 +23,9 @@ jobs:
 
     - name: Restore Dependencies
       run: |
-          cd src
+          cd src\EsportsProfileApi.Web
           ls -la
-          dotnet restore
+          dotnet restore EsportsProfileWebApi.Web
 
     - name: Build
       run: dotnet build --configuration Release
