added xml file for code coverage.

--- a/.github/workflows/main_SETSRV.yml
+++ b/.github/workflows/main_SETSRV.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
       with:
-        filename: coverage.cobertura.xml
+        filename: src\EsportsProfileApi.Web\Tests\coverage.cobertura.xml
         badge: true
         fail_below_min: true
         format: markdown
