--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -14,7 +14,7 @@
     "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
   },
   "UserDatabase": {
-    "ConnectionString": "mongodb://127.0.0.1:27017",
+    "MongoConnection": "mongodb://127.0.0.1:27017",
     "DatabaseName": "mydb",
     "BooksCollectionName": "users"
   },
