--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
@@ -8,15 +8,15 @@
   "Authentication": {
     "Issuer": "https://localhost:5000",
     "Audience": "https://localhost:5000",
-    "Key": "SuperDuperSecretValueSuperDuperSecretValue"
+    "Key": "%SuperDuperSecretValueSuperDuperSecretValue%"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
+    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false",
+    "ConnectionString": "mongodb://127.0.0.1:27017"
   },
   "UserDatabase": {
-    "ConnectionString": "mongodb://127.0.0.1:27017",
     "DatabaseName": "mydb",
     "BooksCollectionName": "users"
   },
-  "front-end-url": "http://localhost:3000"
+  "front-end-url": "% front_end_url %"
 }
