added automapper and cleaned up types

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.Development.json
@@ -15,8 +15,8 @@
     "MongoConnection": "mongodb://127.0.0.1:27017"
   },
   "UserDatabase": {
-    "DatabaseName": "mydb",
-    "BooksCollectionName": "users"
+    "DatabaseName": "EsportsCompare",
+    "BooksCollectionName": "Users"
   },
   "front-end-url": "http://localhost:3000"
 }
