testing removing the subcription id

--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_09CA22C76CF840FAAB403A52E16FA574 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0B86CBAB3D3049FE92EFB96489A0A7E0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1BF8FF839A6142479B4445A9A17A234C }}
+          # github says no: subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1BF8FF839A6142479B4445A9A17A234C }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -65,4 +65,3 @@ jobs:
           app-name: 'EsportsCompare'
           slot-name: 'Production'
           package: .
-          
