--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: EsportsCompare
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +32,8 @@ jobs:
       - name: dotnet publish
         run: |
           cd src/EsportsProfileApi.Web/EsportsProfileWebApi.Web
-          dotnet publish -c Debug --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+          dotnet publish -c Release --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
