added correct path for uploading the package

--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: .net-app
-          path: .
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   deploy:
     runs-on: ubuntu-latest
