adding a debugging item

--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - EsportsCompare
+name: Deploy - EsportsCompare
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.x'
+          dotnet-version: '8.0.x'
           include-prerelease: true
 
       - name: Build with dotnet
@@ -32,7 +32,11 @@ jobs:
       - name: dotnet publish
         run: |
           cd src/EsportsProfileApi.Web/EsportsProfileWebApi.Web
-          dotnet publish -c Release --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+      
+      - name: Testing
+        run: |
+          ls
 
       # - name: Upload artifact for deployment job
       #   uses: actions/upload-artifact@v3
