--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: EsportsCompare
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  AZURE_WEBAPP_PACKAGE_PATH: "src/EsportsProfileApi.Web/EsportsProfileWebApi.Web"
 
 jobs:
   build:
@@ -26,17 +26,14 @@ jobs:
           dotnet-version: '8.0.x'
           include-prerelease: true
 
+      - name: Restore
+        run: dotnet restore src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln
+      
       - name: Build with dotnet
-        run: dotnet build src/EsportsProfileApi.Web/EsportsProfileWebApi.Web --configuration Release
+        run: dotnet build src/EsportsProfileApi.Web/EsportsProfileWebApi.Web --configuration Release --no-restore
 
       - name: dotnet publish
-        run: |
-          cd src/EsportsProfileApi.Web/EsportsProfileWebApi.Web
-          dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
-      
-      - name: Testing
-        run: |
-          ls
+        run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
 
       # - name: Upload artifact for deployment job
       #   uses: actions/upload-artifact@v3
