--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: EsportsCompare
-  AZURE_WEBAPP_PACKAGE_PATH: "src/EsportsProfileApi.Web/EsportsProfileWebApi.Web"
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
   
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
         run: dotnet build src/EsportsProfileApi.Web/EsportsProfileWebApi.Web --configuration Release --no-restore
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}.sln'
+        run: dotnet publish src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
 
       # - name: Upload artifact for deployment job
       #   uses: actions/upload-artifact@v3
