--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: EsportsCompare
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  AZURE_WEBAPP_PACKAGE_PATH: "src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/bin/Release/net8.0/publish"
   
 
 jobs:
