--- a/.github/workflows/main_esportscompare.yml
+++ b/.github/workflows/main_esportscompare.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet restore src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln
       
       - name: Build with dotnet
-        run: dotnet build src/EsportsProfileApi.Web/EsportsProfileWebApi.Web --configuration Release --no-restore
+        run: dotnet build src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln --configuration Release --no-restore
 
       - name: dotnet publish
         run: dotnet publish src/EsportsProfileApi.Web/EsportsProfileWebApi.Web.sln --configuration Release --no-build --output .
