adjusted db connection information

--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
@@ -6,17 +6,12 @@
     }
   },
   "Authentication": {
-    "Issuer": "https://localhost:5000",
-    "Audience": "https://localhost:5000",
-    "Key": "%SuperDuperSecretValueSuperDuperSecretValue%"
+    "Issuer": "%{{ ESPORTSCOMPARE_ISSUER }}%",
+    "Audience": "%{{ ESPORTSCOMPARE_AUDIENCE }}%",
+    "Key": "%{{ SuperDuperSecretValueSuperDuperSecretValue }}%"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false",
-    "ConnectionString": "mongodb://127.0.0.1:27017"
+    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
   },
-  "UserDatabase": {
-    "DatabaseName": "mydb",
-    "BooksCollectionName": "users"
-  },
-  "front-end-url": "% front_end_url %"
+  "front-end-url": "%{{ ESPORTSCOMPARE_FRONTEND_URL }}%"
 }
