--- a/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
+++ b/src/EsportsProfileApi.Web/EsportsProfileWebApi.Web/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "Authentication": {
-    "Issuer": "%{{ ESPORTSCOMPARE_ISSUER }}%",
-    "Audience": "%{{ ESPORTSCOMPARE_AUDIENCE }}%",
-    "Key": "%{{ SuperDuperSecretValueSuperDuperSecretValue }}%"
+    "Issuer": "{{ ESPORTSCOMPARE_ISSUER }}",
+    "Audience": "{{ ESPORTSCOMPARE_AUDIENCE }}",
+    "Key": "{{ KEY }}"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=Jordan;initial catalog=STDEV;trusted_connection=true;encrypt=false"
+    "DefaultConnection": "{{ DefaultConnection }}"
   },
-  "front-end-url": "%{{ ESPORTSCOMPARE_FRONTEND_URL }}%"
+  "front-end-url": "{{ ESPORTSCOMPARE_FRONTEND_URL }}"
 }
